Bug 378969 - ###!!! ASSERTION: ReplaceElementAt(negative index): aIndex >= 0, file nsVoidArray.cpp, line 491, r=jwalden+bmo, sr=peterv, a=mtschrep